src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tcl_comparisons_count_logical_ops_do_not.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 10,
  "branches": 0,
  "conditions": 12,
  "magnitude": 15.620499351813308,
  "assignments_average": 5.0,
  "branches_average": 0.0,
  "conditions_average": 6.0,
  "assignments_min": 0,
  "assignments_max": 10,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 12
}
