src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tcl_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 4,
  "branches": 5,
  "conditions": 2,
  "magnitude": 6.708203932499369,
  "value": 0.0,
  "assignments_average": 2.0,
  "branches_average": 2.5,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 4,
  "branches_min": 0,
  "branches_max": 5,
  "conditions_min": 0,
  "conditions_max": 2
}
