src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tcl_short_circuit_with_boolean_literal_operand.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 1,
  "conditions": 2,
  "magnitude": 2.23606797749979,
  "assignments_average": 0.0,
  "branches_average": 0.5,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 1,
  "conditions_min": 0,
  "conditions_max": 2
}
