src/metrics/snapshots/big_code_analysis__metrics__abc__tests__tsx_assignments_basic.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 4,
  "branches": 0,
  "conditions": 0,
  "magnitude": 4.0,
  "value": 0.0,
  "assignments_average": 1.3333333333333333,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0,
  "assignments_max": 4,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 0
}
